Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138561

QFont::exactMatch index out of bounds

XMLWordPrintable

    • 06b716602 (dev), 9fa2658a1 (6.10), 8c50c7e97 (6.9), 90e14e5fb (tqtc/lts-6.8), 867d0cb37 (tqtc/lts-6.5)

      Application crashes in <QFontDef::exactMatch>

      It occurs due to index out of bounds when iterating over <families>.

      <families> has a count of 2 and  and <other.families> has a count of 1.

      There used to be a check in case the lists have a different size, but it was removed in: Change-Id: Id3c1a4e827756a4c928fed461a4aafa5a0f06633

       

        1. qt6_font_dump_call_stack.txt
          0.6 kB
        2. main.cpp
          0.2 kB
        3. exactmatchissue.pro
          0.5 kB
        4. debugger_data.png
          debugger_data.png
          121 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            roman_schuh Roman Schuh
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: